<resources>
    <string name="app_name">Coursework</string>
    <string name="tv_name">Name of Hike: </string>
    <string name="tv_location">Location: </string>
    <string name="tv_date">Date: </string>
    <string name="tv_parking">Parking available: </string>
    <string name="tv_length">Length the hike: </string>
    <string name="tv_difficulty">Level of difficulty: </string>
    <string name="tv_description">Description: </string>
    <string-array name="difficulty_levels">
        <item>Easy</item>
        <item>Moderate</item>
        <item>Difficult</item>
    </string-array>
    <string name="tv_observation">Observation: </string>
    <string name="tv_obTime">Time of the observation: </string>
    <string name="tv_obComment">Comments: </string>
    <string name="btn_addOb">Add</string>
    <string name="obCommentsHint">Write some comments here</string>
    <string name="btn_obUpdate">Update</string>
</resources>