<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">
    <TextView
        android:id="@+id/txtName"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/tv_name"/>
    <TextView
       android:id="@+id/txtLocation"
       android:layout_width="wrap_content"
       android:layout_height="match_parent"
       android:text="@string/tv_location"/>
    <TextView
       android:id="@+id/txtDate"
       android:layout_width="wrap_content"
       android:layout_height="match_parent"
       android:text="@string/tv_date"/>
    <TextView
       android:id="@+id/txtParking"
       android:layout_width="wrap_content"
       android:layout_height="match_parent"
       android:text="@string/tv_parking"/>
    <TextView
       android:id="@+id/txtLength"
       android:layout_width="wrap_content"
       android:layout_height="match_parent"
       android:text="@string/tv_length"/>
    <TextView
       android:id="@+id/txtDifficulty"
       android:layout_width="wrap_content"
       android:layout_height="match_parent"
       android:text="@string/tv_difficulty"/>
    <TextView
       android:id="@+id/txtDescription"
       android:layout_width="wrap_content"
       android:layout_height="match_parent"
       android:text="@string/tv_description"/>
    <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal">
       <Button
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:id="@+id/btnEditHike"
           android:text="Edit"
           android:layout_marginRight="10dp"/>
       <Button
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:id="@+id/btnDeleteHike"
           android:text="Delete"/>
    </LinearLayout>

</LinearLayout>