<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    android:padding="20dp"
    tools:context=".ObservationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_observation" />

        <EditText
            android:id="@+id/observation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"/>

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_obTime" />

        <TimePicker
            android:id="@+id/obTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:timePickerMode="spinner" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_obComment" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="150dp">
            <EditText
                android:id="@+id/obComments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:lines="4"
                android:hint="@string/obCommentsHint"/>
        </ScrollView>

        <Button
            android:id="@+id/btn_addOb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_addOb" />
    </LinearLayout>
</ScrollView>