<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="29dp"
            android:text="@string/tv_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/hikeName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:ems="10"
            android:inputType="text"
            app:layout_constraintStart_toStartOf="@+id/tv_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_name" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:text="@string/tv_location"
            app:layout_constraintStart_toStartOf="@+id/hikeName"
            app:layout_constraintTop_toBottomOf="@+id/hikeName" />

        <EditText
            android:id="@+id/hikeLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:inputType="text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/tv_parking"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hikeDate" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="No"
            app:layout_constraintBaseline_toBaselineOf="@+id/parkingAvailable"
            app:layout_constraintStart_toStartOf="parent" />

        <Switch
            android:id="@+id/parkingAvailable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="9dp"
            android:layout_marginBottom="16dp"
            android:textOff="No"
            android:textOn="Yes"
            app:layout_constraintBottom_toTopOf="@+id/textView4"
            app:layout_constraintStart_toEndOf="@+id/textView7" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Yes"
            app:layout_constraintBaseline_toBaselineOf="@+id/parkingAvailable"
            app:layout_constraintEnd_toEndOf="@+id/textView4"
            app:layout_constraintStart_toEndOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="17dp"
            android:text="Date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hikeLocation" />

        <DatePicker
            android:id="@+id/hikeDate"
            android:layout_width="0dp"
            android:layout_height="159dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="114dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="114dp"
            android:calendarViewShown="false"
            android:datePickerMode="spinner"
            app:layout_constraintBottom_toBottomOf="@+id/textView4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginBottom="14dp"
            android:text="@string/tv_length"
            app:layout_constraintBottom_toTopOf="@+id/hikeLength"
            app:layout_constraintStart_toStartOf="@+id/hikeLength" />

        <EditText
            android:id="@+id/hikeLength"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="308dp"
            android:ems="10"
            android:inputType="text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:text="@string/tv_difficulty"
            app:layout_constraintStart_toStartOf="@+id/hikeLength"
            app:layout_constraintTop_toBottomOf="@+id/hikeLength" />

        <Spinner
            android:id="@+id/hikeDifficulty"
            android:layout_width="0dp"
            android:layout_height="54dp"
            android:layout_marginStart="1dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView6"
            app:layout_constraintEnd_toEndOf="@+id/hikeLength"
            app:layout_constraintStart_toStartOf="@+id/textView5"
            app:layout_constraintTop_toTopOf="@+id/textView5" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginBottom="179dp"
            android:text="@string/tv_description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/hikeDifficulty" />

        <EditText
            android:id="@+id/hikeDescription"
            android:layout_width="316dp"
            android:layout_height="117dp"
            android:layout_marginTop="47dp"
            android:layout_marginBottom="47dp"
            android:hint="Enter your hike description here"
            android:inputType="textMultiLine"
            android:lines="4"
            app:layout_constraintBottom_toBottomOf="@+id/btnDetails"
            app:layout_constraintStart_toStartOf="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@+id/hikeDifficulty" />

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="Submit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/btnDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="View Details"
            app:layout_constraintBaseline_toBaselineOf="@+id/btnSubmit"
            app:layout_constraintEnd_toStartOf="@+id/btnSubmit" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>